--- a/index1.html
+++ b/index1.html
@@ -3,8 +3,10 @@ javascript:
 比如obj对象声明语法，是一个意义点
 还有就是代码里面的一些看不懂的意义点
 
+语法和代码过，是一个意思，
+代码中有常用的表达方式，函数，要列出来字典
 
-
+1、
 let obj = {
     birth: 1990,
     getAge: function () {
@@ -21,4 +23,13 @@ let
 一个对象的声明语法，里面有birth，有getAage函数，函数里面可以定义一个fn箭头函数赋值给变量然后返回这个指代函数的变量
 
 
+2、
+生成器
+https://liaoxuefeng.com/books/javascript/function/generator/index.html
+generator由function*定义（注意多出的*号）
+用yield返回多次
+直接调用一个generator和调用函数不一样，fib(5)仅仅是创建了一个generator对象，还没有去执行它
+可以记住执行状态的函数
+就是与一个状态
+其实对象也是有一个状态，比如对象的属性
 
