--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,4 @@
-javascript:
+javascript教程: https://liaoxuefeng.com/books/javascript/function/method/index.html
 语法教程基本上就是给我代码的意义点分类
 比如obj对象声明语法，是一个意义点
 还有就是代码里面的一些看不懂的意义点
