Update and rename index1.html to js.html

--- a/js.html
+++ b/js.html
@@ -6,6 +6,14 @@ javascript教程: https://liaoxuefeng.com/books/javascript/function/method/index
 语法和代码过，是一个意思，
 代码中有常用的表达方式，函数，要列出来字典
 
+就是知道的，
+不知道的都列出来
+然后把不知道的逐个攻破，列入知道的
+
+一种是语法层，界面
+比如函数调用，比如数组的操作，update,add,insert,removeItem,getElementById
+
+
 1、
 let obj = {
     birth: 1990,
