--- a/swift3.html
+++ b/swift3.html
@@ -1,35 +1,16 @@
 用法和示例
-常用的代码和解释，即可，然后先分类，语法就那些内容，比如从类的定义开始，类里面的静态属性和方法相当于是相关的外层函数的集合
 
-基础部分
-基本运算符
-字符串和字符
-集合类型
-控制流
-函数
-闭包
-枚举
-类和结构体
-属性
-方法
-下标
-继承
-构造过程
-析构过程
-可选链
-错误处理
-并发
-类型转换
-嵌套类型
-扩展
-协议
-泛型
-不透明类型
-自动引用计数
-内存安全
-访问控制
-高级运算符
+设定时间起来运动和喝水
+语言基本上都这么多
 
+基础部分, 基本运算符, 字符串和字符, 集合类型, 控制流, 函数, 闭包, 枚举, 类和结构体, 属性, 
+方法, 下标, 继承, 构造过程, 析构过程, 可选链, 错误处理, 并发, 类型转换, 嵌套类型, 扩展, 
+协议, 泛型, 不透明类型, 自动引用计数, 内存安全, 访问控制, 高级运算符
 
-
+常用的代码和解释，即可，然后先分类，语法就那些内容，比如从类的定义开始，
+类里面的静态属性和方法相当于是相关的外层函数的集合，
+然后是这个分类的多个代码块
+修饰符，protected就是子类和父类可以使用
+private就是只有自己，外部调用不能使用
+接口就是定义好了方法需要遵循
 
