--- a/swift3.html
+++ b/swift3.html
@@ -7,6 +7,7 @@
 方法, 下标, 继承, 构造过程, 析构过程, 可选链, 错误处理, 并发, 类型转换, 嵌套类型, 扩展, 
 协议, 泛型, 不透明类型, 自动引用计数, 内存安全, 访问控制, 高级运算符
 
+知道什么：
 字面意义点
 常用的代码和解释，即可，然后先分类，语法就那些内容，比如从类的定义开始，
 类里面的静态属性和方法相当于是相关的外层函数的集合，
@@ -16,4 +17,9 @@ private就是只有自己，外部调用不能使用
 接口就是定义好了方法需要遵循
 
 在实例当中来增加知道的字面意义点也可以
+
+
+
+不透明类型
+具有不透明返回类型的函数或方法会隐藏返回值的类型信息
 
