--- a/swift3.html
+++ b/swift3.html
@@ -23,3 +23,10 @@ private就是只有自己，外部调用不能使用
 不透明类型
 具有不透明返回类型的函数或方法会隐藏返回值的类型信息
 
+
+扩展可以给现有类型添加计算型实例属性和计算型类属性
+
+通过扩展添加的实例方法同样也可以修改（或 mutating（改变））实例本身
+
+
+
