--- a/laravel1.html
+++ b/laravel1.html
@@ -50,3 +50,16 @@ Blade 组件标签以字符串 x- 开头，后跟组件类的 kebab 大小写名
 
 https://docs.beikeshop.com/dev/9_hook.html#%E5%AE%9E%E4%BE%8B%E8%AE%B2%E8%A7%A3
 beike 开发教程
+
+
+
+
+
+两种方式，组件，基于类的组件和匿名组件
+基于类的组件和匿名组件
+在为自己的应用程序编写组件时，组件会自动在 app/View/Components 目录和 resources/views/components 目录中发现
+上面的命令将在 app/View/Components/Forms 目录中创建一个 Input 组件，并且该视图将被放置在该 resources/views/components/forms 目录中
+上面的命令将创建一个 Blade 文件，该文件 resources/views/components/forms/input.blade.php 可以通过 <x-forms.input /> 呈现为组件
+
+
+
